<resources>
    <string name="app_name">समाचार</string>
    <string name="title">समाचार</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="menu_world">विश्व</string>
    <string name="menu_business">अर्थ</string>
    <string name="menu_technology">प्रविधि</string>
    <string name="menu_entertainment">कला</string>
    <string name="menu_health">स्वास्थ्य</string>
    <string name="menu_setting">सेट्टिङ्स</string>
    <string name="menu_headline">मुख्य समाचार </string>
    <string name="image_picture">Image picture</string>
    <string name="date">Date</string>
    <string name="title_activity_detail_feed">DetailFeed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="copy_right">fdidi</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string-array name="listDisplayWord">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
    <string-array name="listReturnValue">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
