<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top_view"
        android:checkableBehavior="single">
        <item
            android:id="@+id/headlines_frag"
            android:checked="true"
            android:icon="@drawable/icon_headlines"
            android:title="@string/menu_headline" />
        <item
            android:id="@+id/world_frag"
            android:icon="@drawable/icon_world"
            android:title="@string/menu_world" />
        <item
            android:id="@+id/business_frag"
            android:icon="@drawable/icon_business"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/technology_frag"
            android:icon="@drawable/icon_technology"
            android:title="@string/menu_technology" />
        <item
            android:id="@+id/entertainment_frag"
            android:icon="@drawable/icon_entertainment"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/health_frag"
            android:icon="@drawable/icon_health"
            android:title="@string/menu_health" />
    </group>
    <group
        android:id="@+id/bottom_view"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:checkable="false"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_setting" />
    </group>


</menu>